Use vite-node instead of ts-node to run the scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,10 @@
     "skipLibCheck": true
   },
   "ts-node": {
+    "esm": true,
     "compilerOptions": {
       "isolatedModules": false,
-      "esModuleInterop": true,
-      "moduleResolution": "node",
-      "module": "CommonJS"
+      "esModuleInterop": true
     }
   },
   "exclude": ["node_modules", "test", "scripts"]
