--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "test:run-only": "mocha  --require test/testhooks.ts \"./**/*.doctest.ts\" \"test/*\" \"test/**/*.ts\"",
     "test": "(npm run generate:doctests 2>&1 | grep -v \"No doctests found in\") && npm run test:run-only && npm run clean:tests",
     "init": "npm ci && npm run generate && npm run generate:editor-layer-index && npm run generate:layouts && npm run clean",
-    "generate:editor-layer-index": "vite-node scripts/downloadFile.ts https://osmlab.github.io/editor-layer-index/imagery.geojson assets/editor-layer-index.json",
-    "generate:polygon-features": "vite-node scripts/downloadFile.ts  https://raw.githubusercontent.com/tyrasd/osm-polygon-features/master/polygon-features.json assets/polygon-features.json",
+    "generate:editor-layer-index": "vite-node scripts/downloadFile.ts -- https://osmlab.github.io/editor-layer-index/imagery.geojson assets/editor-layer-index.json",
+    "generate:polygon-features": "vite-node scripts/downloadFile.ts -- https://raw.githubusercontent.com/tyrasd/osm-polygon-features/master/polygon-features.json assets/polygon-features.json",
     "generate:images": "vite-node scripts/generateIncludedImages.ts",
     "generate:translations": "vite-node scripts/generateTranslations.ts",
     "watch:translations": "cd langs && ls | entr -c npm run generate:translations",
-    "reset:translations": "vite-node scripts/generateTranslations.ts --ignore-weblate",
+    "reset:translations": "vite-node scripts/generateTranslations.ts -- --ignore-weblate",
     "generate:layouts": "vite-node scripts/generateLayouts.ts",
     "generate:docs": "vite-node scripts/generateDocs.ts && vite-node scripts/generateTaginfoProjectFiles.ts",
-    "generate:cache:speelplekken:mini": "vite-node scripts/generateCache.ts speelplekken 14 ../MapComplete-data/speelplekken_cache_mini/ 51.181710380278176 4.423413276672363 51.193007664772495 4.444141387939452",
-    "generate:cache:speelplekken": "npm run generate:layeroverview && vite-node scripts/generateCache.ts speelplekken 14 ../MapComplete-data/speelplekken_cache/ 51.20 4.35 51.09 4.56",
-    "generate:cache:natuurpunt": "npm run generate:layeroverview && vite-node scripts/generateCache.ts natuurpunt 12 ../MapComplete-data/natuurpunt_cache/ 50.40 2.1 51.54 6.4 --generate-point-overview nature_reserve,visitor_information_centre",
-    "generate:cache:natuurpunt:mini": "vite-node scripts/generateCache.ts natuurpunt 12 ../../git/MapComplete-data/natuurpunt_cache_mini/ 51.00792239979105 4.497699737548828 51.0353492224462554 4.539070129394531 --generate-point-overview nature_reserve,visitor_information_centre",
+    "generate:cache:speelplekken:mini": "vite-node scripts/generateCache.ts -- speelplekken 14 ../MapComplete-data/speelplekken_cache_mini/ 51.181710380278176 4.423413276672363 51.193007664772495 4.444141387939452",
+    "generate:cache:speelplekken": "npm run generate:layeroverview && vite-node scripts/generateCache.ts -- speelplekken 14 ../MapComplete-data/speelplekken_cache/ 51.20 4.35 51.09 4.56",
+    "generate:cache:natuurpunt": "npm run generate:layeroverview && vite-node scripts/generateCache.ts -- natuurpunt 12 ../MapComplete-data/natuurpunt_cache/ 50.40 2.1 51.54 6.4 --generate-point-overview nature_reserve,visitor_information_centre",
+    "generate:cache:natuurpunt:mini": "vite-node scripts/generateCache.ts -- natuurpunt 12 ../../git/MapComplete-data/natuurpunt_cache_mini/ 51.00792239979105 4.497699737548828 51.0353492224462554 4.539070129394531 --generate-point-overview nature_reserve,visitor_information_centre",
     "generate:layeroverview": "vite-node scripts/generateLayerOverview.ts",
-    "generate:licenses": "vite-node scripts/generateLicenseInfo.ts --no-fail",
-    "query:licenses": "vite-node scripts/generateLicenseInfo.ts --query",
+    "generate:licenses": "vite-node scripts/generateLicenseInfo.ts -- --no-fail",
+    "query:licenses": "vite-node scripts/generateLicenseInfo.ts -- --query",
     "generate:contributor-list": "vite-node scripts/generateContributors.ts",
     "generate:schemas": "ts2json-schema -p Models/ThemeConfig/Json/ -o Docs/Schemas/ -t tsconfig.json -R . -m \".*ConfigJson\" && vite-node scripts/fixSchemas.ts ",
     "generate:service-worker": "tsc service-worker.ts && git_hash=$(git rev-parse HEAD) && sed -i'.bkp' \"s/GITHUB-COMMIT/$git_hash/\" service-worker.js && rm service-worker.js.bkp",
